menu safari alignment issue re-try #2

--- a/src/style.css
+++ b/src/style.css
@@ -429,7 +429,6 @@ nav {
 }
 
 nav ul {
-  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
@@ -441,12 +440,16 @@ nav ul {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+      align-items: center;
   margin: 0 auto;
   width: 100%;
   padding: 0;
+  display: -webkit-box;
+  -webkit-box-pack: center;
+  /* justify-content */
+  -webkit-box-align: center;
+  /* align-items */
 }
 
 nav ul li {
